--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["ceramica", "nera", "Nuxt", "oliva", "pomodoro"]
+  "cSpell.words": ["ceramica", "firestore", "nera", "Nuxt", "oliva", "pomodoro"]
 }
